# Vimo-Assistance

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py
app/core/: configs.py  settings.py
app/data_loader/: __init__.py  docx_parser.py  md_parser.py  pdf_parser.py  pptx_parser.py  xlsx_parser.py
app/db/: base.py  dependencies.py  keyword_index.py  models.py  utils.py
app/schemas/: base.py  crawl_schema.py  ingest_schema.py  pgvector_schema.py  retrieval_schema.py
app/services/: chat.py  crawl.py  ingest.py  prompts.py  retrieval.py
app/services/parsers/: __init__.py  amazon_parser.py  base_parser.py  bonbanh_parser.py  lottemart_parser.py  shopee_parser.py
app/text_splitter/: __init__.py
app/utils/: api_utils.py  file_utils.py  log_utils.py  openai_connect.py
app/web/: application.py  lifespan.py
app/web/api/: router.py
app/web/api/chat/: __init__.py  views.py
app/web/api/crawl/: __init__.py  views.py
app/web/api/ingest_api/: __init__.py  views.py
demo/: Dockerfile.streamlit  pyproject.toml  streamlit_app.py  utils.py
scripts/: download_data.sh  ingest.py
